{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 56,
  "lineage": "abf1cfdf-d026-c8be-7a45-5cef331e9ca6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:security-group/sg-061548cd79eb5b397",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-061548cd79eb5b397",
            "name": "default",
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-default",
              "Project": "kentayoshii"
            },
            "timeouts": null,
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:vpc-endpoint/vpce-0f24c411fad295dd6",
            "cidr_blocks": [
              "52.94.8.0/24",
              "13.248.69.0/24",
              "13.248.70.0/24",
              "35.71.114.0/25",
              "35.71.114.128/26"
            ],
            "id": "vpce-0f24c411fad295dd6",
            "owner_id": "741641693274",
            "policy": "{\"Statement\":[{\"Action\":\"dynamodb:*\",\"Condition\":{\"StringNotEquals\":{\"aws:sourceVpce\":\"vpc-059bb26dfc1bc5b03\"}},\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06cb3b4accd511ca1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.dynamodb",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Owner": "user",
              "Project": "kentayoshii"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "dependencies": [
            "data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tc-vpc.aws_route_table.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:loadbalancer/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a",
            "arn_suffix": "app/intern-kentayoshii-tclone-alb/cb143e76b75a591a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "intern-kentayoshii-tclone-alb-673431968.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:loadbalancer/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "intern-kentayoshii-tclone-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03866a5b90321930b",
              "sg-04f485a6f206e98cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e1cf89fbbf891b4"
              },
              {
                "subnet_id": "subnet-0d2dcb4a54c1f0a01"
              }
            ],
            "subnets": [
              "subnet-01e1cf89fbbf891b4",
              "subnet-0d2dcb4a54c1f0a01"
            ],
            "tags": {
              "Name": "intern-kentayoshii-tclone-alb"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-alb",
              "Project": "kentayoshii"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-alb.aws_security_group.this",
            "module.tc-vpc.aws_subnet.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:listener/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a/25ddee9f06cce493",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:targetgroup/tclone20230606100534802100000001/5119ab1038a3f510",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:listener/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a/25ddee9f06cce493",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:loadbalancer/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Project": "kentayoshii"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-alb.aws_lb.this",
            "module.tc-alb.aws_lb_target_group.main",
            "module.tc-alb.aws_security_group.this",
            "module.tc-vpc.aws_subnet.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:listener/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a/e510cbb2267aa7a6",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:741641693274:certificate/7eab6685-6ac6-4edf-aea0-f585d2088f02",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:targetgroup/tclone20230606100534802100000001/5119ab1038a3f510",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:listener/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a/e510cbb2267aa7a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:loadbalancer/app/intern-kentayoshii-tclone-alb/cb143e76b75a591a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Project": "kentayoshii"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-alb.aws_lb.this",
            "module.tc-alb.aws_lb_target_group.main",
            "module.tc-alb.aws_security_group.this",
            "module.tc-vpc.aws_subnet.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:targetgroup/tclone20230606100534802100000001/5119ab1038a3f510",
            "arn_suffix": "targetgroup/tclone20230606100534802100000001/5119ab1038a3f510",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:741641693274:targetgroup/tclone20230606100534802100000001/5119ab1038a3f510",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tclone20230606100534802100000001",
            "name_prefix": "tclone",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tclone"
            },
            "tags_all": {
              "Name": "tclone",
              "Project": "kentayoshii"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tc-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:security-group/sg-03866a5b90321930b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03866a5b90321930b",
            "ingress": [],
            "name": "intern-kentayoshii-tclone-alb-20230606044659535600000001",
            "name_prefix": "intern-kentayoshii-tclone-alb-",
            "owner_id": "741641693274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "intern-kentayoshii-tclone-alb"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-alb",
              "Project": "kentayoshii"
            },
            "timeouts": null,
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tc-alb-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:security-group/sg-04f485a6f206e98cd",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f485a6f206e98cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "210.253.197.196/32",
                  "210.253.209.177/32",
                  "118.238.221.230/32",
                  "54.249.20.115/32",
                  "150.249.192.7/32",
                  "150.249.202.244/32",
                  "150.249.202.245/32",
                  "150.249.202.253/32",
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "210.253.197.196/32",
                  "210.253.209.177/32",
                  "118.238.221.230/32",
                  "54.249.20.115/32",
                  "150.249.192.7/32",
                  "150.249.202.244/32",
                  "150.249.202.245/32",
                  "150.249.202.253/32",
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "intern-kentayoshii-tclone-alb-sg-20230606044659841000000004",
            "name_prefix": "intern-kentayoshii-tclone-alb-sg-",
            "owner_id": "741641693274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "intern-kentayoshii-tclone-alb-sg"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-alb-sg",
              "Project": "kentayoshii"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tc-alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-652851648",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04f485a6f206e98cd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-alb-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "210.253.197.196/32",
              "210.253.209.177/32",
              "118.238.221.230/32",
              "54.249.20.115/32",
              "150.249.192.7/32",
              "150.249.202.244/32",
              "150.249.202.245/32",
              "150.249.202.253/32",
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-4201138812",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04f485a6f206e98cd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "210.253.197.196/32",
              "210.253.209.177/32",
              "118.238.221.230/32",
              "54.249.20.115/32",
              "150.249.192.7/32",
              "150.249.202.244/32",
              "150.249.202.245/32",
              "150.249.202.253/32",
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1759186287",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04f485a6f206e98cd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-ecs-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.tc-ecs-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:security-group/sg-03b33bd6387c45767",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b33bd6387c45767",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04f485a6f206e98cd"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f485a6f206e98cd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "intern-kentayoshii-tclone-ecs-sg-20230606044659538300000002",
            "name_prefix": "intern-kentayoshii-tclone-ecs-sg-",
            "owner_id": "741641693274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "intern-kentayoshii-tclone-ecs-sg"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-ecs-sg",
              "Project": "kentayoshii"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tc-ecs-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1359537917",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03b33bd6387c45767",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-ecs-sg.aws_security_group.this",
            "module.tc-ecs-sg.aws_security_group.this_name_prefix",
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-ecs-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-56902292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03b33bd6387c45767",
            "security_group_rule_id": "sgr-0b41a22dfe1e64619",
            "self": false,
            "source_security_group_id": "sg-04f485a6f206e98cd",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-alb-sg.aws_security_group.this",
            "module.tc-alb-sg.aws_security_group.this_name_prefix",
            "module.tc-ecs-sg.aws_security_group.this",
            "module.tc-ecs-sg.aws_security_group.this_name_prefix",
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:network-acl/acl-0ae2db901c469c16d",
            "default_network_acl_id": "acl-0ae2db901c469c16d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ae2db901c469c16d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "741641693274",
            "subnet_ids": [
              "subnet-00ecfbe1bff311397",
              "subnet-01e1cf89fbbf891b4",
              "subnet-0d2dcb4a54c1f0a01"
            ],
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-default"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-default",
              "Project": "kentayoshii"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:route-table/rtb-00901bc535234e42c",
            "default_route_table_id": "rtb-00901bc535234e42c",
            "id": "rtb-00901bc535234e42c",
            "owner_id": "741641693274",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-default"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-default",
              "Project": "kentayoshii"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:security-group/sg-061548cd79eb5b397",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-061548cd79eb5b397",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "741641693274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-default"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-default",
              "Project": "kentayoshii"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:internet-gateway/igw-0cc6cef1ecfefcfe6",
            "id": "igw-0cc6cef1ecfefcfe6",
            "owner_id": "741641693274",
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc",
              "Project": "kentayoshii"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "dependencies": [
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc6cef1ecfefcfe6",
            "id": "r-rtb-06cb3b4accd511ca11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cb3b4accd511ca1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_internet_gateway.this",
            "module.tc-vpc.aws_route_table.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:route-table/rtb-06cb3b4accd511ca1",
            "id": "rtb-06cb3b4accd511ca1",
            "owner_id": "741641693274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc6cef1ecfefcfe6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-public"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-public",
              "Project": "kentayoshii"
            },
            "timeouts": null,
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d071311e1be6973",
            "route_table_id": "rtb-06cb3b4accd511ca1",
            "subnet_id": "subnet-0d2dcb4a54c1f0a01"
          },
          "dependencies": [
            "module.tc-vpc.aws_route_table.public",
            "module.tc-vpc.aws_subnet.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea282b296f46f8f",
            "route_table_id": "rtb-06cb3b4accd511ca1",
            "subnet_id": "subnet-01e1cf89fbbf891b4"
          },
          "dependencies": [
            "module.tc-vpc.aws_route_table.public",
            "module.tc-vpc.aws_subnet.public",
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:subnet/subnet-0d2dcb4a54c1f0a01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2dcb4a54c1f0a01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741641693274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-public-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-public-ap-northeast-1a",
              "Project": "kentayoshii"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "dependencies": [
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:subnet/subnet-01e1cf89fbbf891b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e1cf89fbbf891b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741641693274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc-public-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc-public-ap-northeast-1c",
              "Project": "kentayoshii"
            },
            "vpc_id": "vpc-059bb26dfc1bc5b03"
          },
          "dependencies": [
            "module.tc-vpc.aws_vpc.this",
            "module.tc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tc-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:741641693274:vpc/vpc-059bb26dfc1bc5b03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae2db901c469c16d",
            "default_route_table_id": "rtb-00901bc535234e42c",
            "default_security_group_id": "sg-061548cd79eb5b397",
            "dhcp_options_id": "dopt-b2413fd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059bb26dfc1bc5b03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00901bc535234e42c",
            "owner_id": "741641693274",
            "tags": {
              "Name": "intern-kentayoshii-tclone-vpc"
            },
            "tags_all": {
              "Name": "intern-kentayoshii-tclone-vpc",
              "Project": "kentayoshii"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}